syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf.docker";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

import "data_entry.proto";
import "google/protobuf/wrappers.proto";
import "atomic_badge.proto";

message CallContractTransaction {
  bytes id = 1;
  bytes sender_public_key = 2;
  bytes contract_id = 3;
  repeated DataEntry params = 4;
  int64 fee = 5;
  int64 timestamp = 6;
  int32 contract_version = 7;
  google.protobuf.BytesValue fee_asset_id = 8;
  AtomicBadge atomic_badge = 9;
  repeated bytes proofs = 10;
  bytes sender_address = 11;
}